Alignment issue solved

--- a/client/src/Styles/Navbar.module.css
+++ b/client/src/Styles/Navbar.module.css
@@ -99,10 +99,18 @@
     /* margin-left: 10px; */
     cursor: pointer;
 }
+.navbarItem span {
+    margin: 0;
+    vertical-align: middle;
+}
 .navbarItem > * {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 5px;
+}
+.navbarItem > div > * {
+    vertical-align: middle;
 }
 .badge {
     width: 45%;
@@ -146,15 +154,14 @@
     height: 24px;
     top: 41px;
     left: 1146px;
-    margin-right: 8px;
     font-family: "Poppins", sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
     letter-spacing: 0em;
     text-align: left;
-    padding: 5px;
-    margin-bottom: 5px;
+    margin-right: 5px;
+    vertical-align: middle;
 }
 
 .expertIcon {
